--- a/components/progressBar/progress.module.css
+++ b/components/progressBar/progress.module.css
@@ -1,10 +1,10 @@
 .progress {
     background-color: #d8d8d8;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     position: relative;
-    margin: 15px 0;
-    height: 30px;
-    width: 80%;
+    /* margin: 15px 0; */
+    height: 45px;
+    width: 100%;
     display: flex;
     align-items: center;
   }
@@ -12,7 +12,7 @@
   .progressDone {
     background: linear-gradient(to left, #ff0202, #ff9472);
     box-shadow: 0 3px 3px -5px #f27f70, 0 2px 5px #f2709c;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     color: #fff;
     display: flex;
     align-items: center;
@@ -21,4 +21,8 @@
     width: 0;
     opacity: 0;
     transition: 1s ease 0.3s;
+  }
+
+  .join{
+    font-size: 13px;
   }
