--- a/components/copys/copys.module.css
+++ b/components/copys/copys.module.css
@@ -27,10 +27,10 @@
 }
 
 .buttonPromo {
-  background-color: red;
+  background-color: #cb292f;
   color: white;
   text-align: center;
-  width: 50%;
+  width: 80%;
   border-radius: 12px;
   height: 50px;
   cursor: pointer;
