--- a/components/mockup/mockup.module.css
+++ b/components/mockup/mockup.module.css
@@ -1,9 +1,8 @@
 .mockupCopyLeft {
   width: 130%;
   height: 95%;
-  margin-left: 2%;
-  text-align: right;
-  padding-right: 7%;
+  margin: 0px 0px 0px 20px;
+  
 }
 
 .mockupCopyRight {
@@ -11,7 +10,10 @@
     height: 95%;
     text-align: left;
   }
-
+  
+.listTwoColumn {
+  padding: 10px 16px 2px 16px;
+}
 @media (min-width: 1180px) {
   .mockup-copy-left {
     width: 115%;
